feat: add admin user dashboard route, swagger docs
